<resources>
    <string name="app_name">Lab8 Toolbar</string>
    <string name="textv1">Enter your email address</string>
    <string name="ButtonText">Login</string>
    <string name="edt1">Type your email</string>
    <string name="textv2">Enter the password</string>
    <string name="edt2">  password        </string>
    <string name="toast_message">Jumping...</string>
    <string name="sButton">SEND</string>
    <string name="rButton">RECEIVE...</string>
    <string name="tptext">Type here.</string>
    <string name="chatbtnmsg">Go to chat</string>
    <string name="ptextmeg1">Your profile.</string>
    <string name="ptextmeg2">Your name</string>
    <string name="ptextmeg3">Your email</string>
    <string name="ptextmeg4">Your picture</string>
    <string name="ptextmeg5">Click the button above to take a picture</string>
    <string name="pet1">Enter your name</string>
    <string name="pet2">Enter your email</string>
    <string name="sendmsg">SEND</string>
    <string name="recievemsg">RECEIVE</string>
    <string name="crtype">Type here</string>
    <string name="rm_title">Do you want delete this?</string>
    <string name="rm_msg1">"The selected row is: "</string>
    <string name="rm_msg2">"The database id is: " </string>
    <string name="p_msg1">"YES "</string>
    <string name="n_msg2">"NO" </string>
    <string name="checkwt">"CHECK WEATHER" </string>
    <string name="currtp">"Current Temperature" </string>
    <string name="mintp">"Current Temperature" </string>
    <string name="maxtp">"Current Temperature" </string>
    <string name="uvrt">"UV Rating" </string>

    <string name="fd_Meg1">"Message Here"</string>
    <string name="fd_Meg2">"ID="</string>
    <string name="fdckbox">"is a Send Message"</string>
    <string name="hidetext">"HIDE"</string>
    <string name="go2Toolbar">"Go to Toolbar"</string>
    <string name="aButton">"GDFDSF "</string>
    <string name="chatitem">"CHAT "</string>
    <string name="weatheritem">"WEATHER "</string>
    <string name="backitem">"WEATHER "</string>
    <string name="on">"ON "</string>
    <string name="off">"OFF "</string>
    <string name="overflow">"You clicked on overflow"</string>
    <string name="close">"Close"</string>
    <string name="open">"Open"</string>
    <string name="gochat">"Go To Chat"</string>
    <string name="goweather">"Go To Weather"</string>
    <string name="goback">"go back"</string>
    <string name="chat">"Chat"</string>
    <string name="weather">"Weather"</string>
    <string name="back">"Back"</string>

</resources>