<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myText1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/textv1"
        android:textColor="#9C27B0"
        android:textSize="30dp"
        android:layout_marginBottom="10dp">
    </TextView>

    <EditText
        android:id="@+id/editT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:text="@string/edt1"
        android:textSize="25dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/myText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/textv2"
        android:textColor="#9C27B0"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editT2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="@string/edt2"
        android:textSize="25dp" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:height="200dp"
        android:background="#99958d"
        android:orientation="horizontal"
        android:text="@string/ButtonText" />


</LinearLayout>