<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">


    <ImageView
        android:id="@+id/currwt"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/curweather"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/currtp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/mintemp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/mintp"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/maxtemp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/maxtp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/UVrating"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:textSize="25dp"
        android:text="@string/uvrt"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>


</LinearLayout>

