<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/crlv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


    </ListView>

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:text="@string/sButton"
        android:layout_alignBottom="@id/crlv"
        />

    <EditText
        android:id="@+id/type"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:hint="@string/tptext"
        android:layout_alignBottom="@id/crlv"/>

    <Button
        android:id="@+id/rcvbtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:text="@string/rButton"
        android:layout_alignBottom="@id/crlv"
        android:layout_alignRight="@id/crlv"
        />

</RelativeLayout>